# pkg/response/response.go
@@ -1,8 +1,16 @@
 package response
 
+import (
+	"github.com/gin-gonic/gin"
+)
+
 type Meta struct {
-	Code    string `json:"code"`
-	Message string `json:"message"`
+	Code       int    `json:"code"`
+	Message    string `json:"message"`
+	Page       *int   `json:"page,omitempty"`
+	Limit      *int   `json:"limit,omitempty"`
+	TotalRows  *int   `json:"total_rows,omitempty"`
+	TotalPages *int   `json:"total_pages,omitempty"`
 }
 
 type Response struct {
@@ -10,22 +18,41 @@ type Response struct {
 	Meta Meta        `json:"meta"`
 }
 
-func Ok(data interface{}) Response {
-	return Response{
+// SendSuccess sends a standard success response
+func SendSuccess(c *gin.Context, code int, message string, data interface{}) {
+	c.JSON(code, Response{
 		Data: data,
-		Meta: Meta{
-			Code:    "ok",
-			Message: "Ok",
-		},
-	}
-}
-
-func Err(code string, message string) Response {
-	return Response{
-		Data: nil,
 		Meta: Meta{
 			Code:    code,
 			Message: message,
 		},
-	}
+	})
+}
+
+// SendPagination sends a paginated success response
+func SendPagination(c *gin.Context, code int, message string, data interface{},
+	page, limit, totalRows, totalPages int) {
+
+	c.JSON(code, Response{
+		Data: data,
+		Meta: Meta{
+			Code:       code,
+			Message:    message,
+			Page:       &page,
+			Limit:      &limit,
+			TotalRows:  &totalRows,
+			TotalPages: &totalPages,
+		},
+	})
+}
+
+// SendError sends an error response
+func SendError(c *gin.Context, code int, message string, err interface{}) {
+	c.JSON(code, Response{
+		Data: err,
+		Meta: Meta{
+			Code:    code,
+			Message: message,
+		},
+	})
 }
